[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/fonts/FFFFORWA.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/terrain/AlchemyGuidebook.gd" type="Script" id=2]
[ext_resource path="res://assets/terrain/hub_level/book_stand.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/UI/quiticon.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/book_textbox.png" type="Texture" id=6]
[ext_resource path="res://assets/misc/common_monster_dust.png" type="Texture" id=7]
[ext_resource path="res://assets/misc/goblin_scales.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 43.8902, 49.2892 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 4 )

[node name="AlchemyGuidebook" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.448471, 1.83575 )
shape = SubResource( 1 )

[node name="Label" type="RichTextLabel" parent="."]
margin_left = -115.979
margin_top = -108.878
margin_right = 118.021
margin_bottom = -54.8775
custom_fonts/bold_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[b]Journal[/b][img=40]res://assets/UI/icon_E.png[/img]"
text = "Journal"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plaque" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Plaque"]
visible = false
anchor_left = 0.5
anchor_top = 0.33
anchor_right = 0.5
anchor_bottom = 0.33
margin_left = -540.0
margin_top = -237.6
margin_right = 534.0
margin_bottom = 484.4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Plaque/Control"]
anchor_left = 0.518
anchor_top = 0.321
anchor_right = 0.518
anchor_bottom = 0.321
margin_left = -436.332
margin_top = -81.762
margin_right = 435.668
margin_bottom = 455.238
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="RichTextLabel" parent="Plaque/Control/NinePatchRect"]
margin_left = 75.0
margin_top = 52.0
margin_right = 820.0
margin_bottom = 100.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "========= [color=#a800bf]Guide to Alchemy[/color] ========="
text = "========= Guide to Alchemy ========="
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="Plaque/Control/NinePatchRect"]
anchor_right = 0.153
margin_left = 75.0
margin_top = 96.0
margin_right = 676.584
margin_bottom = 169.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "Alchemy is the magical process of creating [color=red]potions[/color] through mixing [color=blue]ingredients[/color] in a [color=green]cauldron[/color]. "
text = "Alchemy is the magical process of creating potions through mixing ingredients in a cauldron. "
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="Plaque/Control/NinePatchRect"]
margin_left = 796.471
margin_top = 7.6884
margin_right = 836.471
margin_bottom = 47.6884
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dust" type="Sprite" parent="Plaque/Control/NinePatchRect"]
position = Vector2( 119.987, 216.225 )
scale = Vector2( 7.5, 7.5 )
texture = ExtResource( 7 )

[node name="DustText" type="RichTextLabel" parent="Plaque/Control/NinePatchRect"]
anchor_right = 0.153
margin_left = 179.0
margin_top = 169.0
margin_right = 280.584
margin_bottom = 332.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[color=#13babd]Common dust[/color] is dropped by weak enemies such as slimes, bats and spiders."
text = "Common dust is dropped by weak enemies such as slimes, bats and spiders."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scales" type="Sprite" parent="Plaque/Control/NinePatchRect"]
position = Vector2( 519.061, 228.225 )
scale = Vector2( 7.5, 7.5 )
texture = ExtResource( 8 )

[node name="ScalesText" type="RichTextLabel" parent="Plaque/Control/NinePatchRect"]
anchor_right = 0.153
margin_left = 598.0
margin_top = 169.0
margin_right = 680.584
margin_bottom = 301.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[color=#53ad0e]Goblins scales[/color] are dropped by goblins and their variants."
text = "Goblins scales are dropped by goblins and their variants."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="pressed" from="Plaque/Control/NinePatchRect/CloseButton" to="." method="_on_CloseButton_pressed"]
